apps/configs/forgejo/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: forgejo
  namespace: forgejo
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`forgejo.local.ruizops.com`)
      kind: Rule
      priority: 100
      services:
        - name: forgejo-http
          namespace: forgejo
          port: 3000
  tls:
    secretName: forgejo-tls
